--- a/sign/templates/index.html
+++ b/sign/templates/index.html
@@ -5,6 +5,14 @@
     <title>Django Page</title>
 </head>
 <body>
-    <h1>Hello Django ！！</h1>
+    <h1>发布会管理</h1>
+    <form method="POST" action="/login_action/">
+        <input name="username" type="text" placeholder="username"><br>
+        <input name="password" type="password" placeholder="password"> <br>
+        {{error}} <br>
+        <button id="btn" type="submit">登录</button>
+        <!--   添加 csrf 令牌     -->
+<!--        {% csrf_token %}-->
+    </form>
 </body>
 </html>
