--- a/sign/templates/guest_manage.html
+++ b/sign/templates/guest_manage.html
@@ -7,7 +7,7 @@
 		{% load bootstrap3 %} {% bootstrap_css %} {% bootstrap_javascript %}
 		<title>Guest Manage</title>
 	</head>
-	<body role="document">
+	<body>
 		<!-- 导航栏 -->
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
@@ -16,8 +16,8 @@
 				</div>
 				<div id="navbar" class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="#">发布会</a></li>
-						<li><a href="/guest_manage/">嘉宾</a></li>
+						<li class="active"><a href="/event_manage/">发布会</a></li>
+						<li><a href="#">嘉宾</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#">{{user}}</a></li>
@@ -27,38 +27,38 @@
 			</div>
 		</nav>
 
-		<!-- 发布会搜索表单 -->
+		<!-- 嘉宾搜索表单 -->
 		<div class="page-header" style="padding-top: 60px">
 			<div id="navbar" class="navbar-collapse collapse">
-				<form action="/search_name" class="navbar-form" method="get">
+				<form action="/search_realname" class="navbar-form" method="get">
 					<input type="text" name="name" placeholder="名称" />
 					<button type="submit" class="btn btn-success">搜索</button>
 				</form>
 			</div>
 		</div>
 
-		<!-- 发布会表 -->
-		<div class="row" style="padding-top: 20x">
+		<!-- 嘉宾列表 -->
+		<div class="row" style="padding-top: 20px">
 			<div class="col-md-6">
 				<table class="table table-striped">
 					<thead>
 						<tr>
 							<th>id</th>
 							<th>名称</th>
-							<th>状态</th>
-							<th>地址</th>
-							<th>时间</th>
+							<th>手机</th>
+							<th>邮箱</th>
+							<th>签到</th>
+							<th>发布会</th>
 						</tr>
 					</thead>
-
 					<tbody>
-						{% for event in events %}
+						{% for guest in guests %}
 						<tr>
-							<td>{{ event.id }}</td>
-							<td>{{ event.name }}</td>
-							<td>{{ event.status }}</td>
-							<td>{{ event.address }}</td>
-							<td>{{ event.start_time }}</td>
+							<td>{{guest.id}}</td>
+							<td>{{guest.realname}}</td>
+							<td>{{guest.phone}}</td>
+							<td>{{guest.email}}</td>
+							<td>{{guest.event}}</td>
 						</tr>
 						{% endfor %}
 					</tbody>
