--- a/sign/templates/guest_manage.html
+++ b/sign/templates/guest_manage.html
@@ -1,69 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		{% load bootstrap3 %} {% bootstrap_css %} {% bootstrap_javascript %}
-		<title>Guest Manage</title>
-	</head>
-	<body>
-		<!-- 导航栏 -->
-		<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container">
-				<div class="navbar-header">
-					<a href="/event_manage/" class="navbar-brand">Guest Manage System</a>
-				</div>
-				<div id="navbar" class="collapse navbar-collapse">
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="/event_manage/">发布会</a></li>
-						<li><a href="#">嘉宾</a></li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">{{user}}</a></li>
-						<li><a href="/logout/">退出</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
 
-		<!-- 嘉宾搜索表单 -->
-		<div class="page-header" style="padding-top: 60px">
-			<div id="navbar" class="navbar-collapse collapse">
-				<form action="/search_realname" class="navbar-form" method="get">
-					<input type="text" name="name" placeholder="名称" />
-					<button type="submit" class="btn btn-success">搜索</button>
-				</form>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	{% load bootstrap3 %} {% bootstrap_css %} {% bootstrap_javascript %}
+	<title>Guest Manage</title>
+</head>
+
+<body>
+	<!-- 导航栏 -->
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<a href="/event_manage/" class="navbar-brand">Guest Manage System</a>
+			</div>
+			<div id="navbar" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="/event_manage/">发布会</a></li>
+					<li><a href="#">嘉宾</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">{{user}}</a></li>
+					<li><a href="/logout/">退出</a></li>
+				</ul>
 			</div>
 		</div>
+	</nav>
 
-		<!-- 嘉宾列表 -->
-		<div class="row" style="padding-top: 20px">
-			<div class="col-md-6">
-				<table class="table table-striped">
-					<thead>
-						<tr>
-							<th>id</th>
-							<th>名称</th>
-							<th>手机</th>
-							<th>邮箱</th>
-							<th>签到</th>
-							<th>发布会</th>
-						</tr>
-					</thead>
-					<tbody>
-						{% for guest in guests %}
-						<tr>
-							<td>{{guest.id}}</td>
-							<td>{{guest.realname}}</td>
-							<td>{{guest.phone}}</td>
-							<td>{{guest.email}}</td>
-							<td>{{guest.event}}</td>
-						</tr>
-						{% endfor %}
-					</tbody>
-				</table>
-			</div>
+	<!-- 嘉宾搜索表单 -->
+	<div class="page-header" style="padding-top: 60px">
+		<div id="navbar" class="navbar-collapse collapse">
+			<form action="/search_realname" class="navbar-form" method="get">
+				<input type="text" name="name" placeholder="名称" />
+				<button type="submit" class="btn btn-success">搜索</button>
+			</form>
 		</div>
-	</body>
+	</div>
+
+	<!-- 嘉宾列表 -->
+	<div class="row" style="padding-top: 20px">
+		<div class="col-md-6">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>id</th>
+						<th>名称</th>
+						<th>手机</th>
+						<th>邮箱</th>
+						<th>签到</th>
+						<th>发布会</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for guest in guests %}
+					<tr>
+						<td>{{guest.id}}</td>
+						<td>{{guest.realname}}</td>
+						<td>{{guest.phone}}</td>
+						<td>{{guest.email}}</td>
+						<td>{{guest.event}}</td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</div>
+
+	<!-- 列表分页 -->
+	<div class="pagination">
+		<span class="step-links">
+			{% if guest.has_previous %}
+			<a href="?page={{ guests.previous_page_number}}">previous</a>
+			{% endif %}
+			<span class="current">
+				Page {{ guests.number}} of {{ guests.paginator.num_pages}}.
+			</span>
+			{% if guests.has_next %}
+			<a href="?page={{ guests.next_page_number }}">next</a>
+			{% endif %}
+		</span>
+	</div>
+
+</body>
+
 </html>
