--- a/sign/templates/guest_manage.html
+++ b/sign/templates/guest_manage.html
@@ -18,8 +18,8 @@
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="/event_manage/">发布会</a></li>
-					<li><a href="#">嘉宾</a></li>
+					<li><a href="/event_manage/">发布会</a></li>
+					<li class="active"><a href="#">嘉宾</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">{{user}}</a></li>
@@ -60,6 +60,7 @@
 						<td>{{guest.realname}}</td>
 						<td>{{guest.phone}}</td>
 						<td>{{guest.email}}</td>
+						<td>{{guest.sign}}</td>
 						<td>{{guest.event}}</td>
 					</tr>
 					{% endfor %}
