嘉宾姓名搜索改为手机号搜索

--- a/sign/templates/guest_manage.html
+++ b/sign/templates/guest_manage.html
@@ -32,7 +32,7 @@
 	<!-- 嘉宾搜索表单 -->
 	<div class="page-header" style="padding-top: 60px">
 		<div id="navbar" class="navbar-collapse collapse">
-			<form action="/search_realname" class="navbar-form" method="get">
+			<form action="/search_phone" class="navbar-form" method="get">
 				<input type="text" name="name" placeholder="名称" />
 				<button type="submit" class="btn btn-success">搜索</button>
 			</form>
